--- a/index.html
+++ b/index.html
@@ -3,8 +3,72 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Landing Page</title>
     </head>
     <body>
-        
+        <div class="navbar">
+            <div class="logo">
+                Header Logo
+            </div>
+            <div class="header-links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
+        </div>
+        <div class="preview">
+            <div class="preview-left">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <div class="move-button">
+                    <button><a href=#>Sign up</a></button>
+                </div>
+                
+            </div>
+            <div class="preview-right">
+                <h4>this is a preview for an image</h4>
+            </div>
+        </div>
+        <div class="certified-reviews">
+            <h3>Some random information.</h3>
+            <div class="card-container">
+                <div class="card-1">
+                    <div class="card"></div>
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card-2">
+                    <div class="card"></div>
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card-3">
+                    <div class="card"></div>
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card-4">
+                    <div class="card"></div>
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+        <div class="quote">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+            <h4>-Thor, God of Thunder</h4>
+        </div>
+        <div class="call-to-action">
+            <div class="recipient">
+                <div class="recipient-left">
+                    <h4>Call to action! It's time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="recipient-right">
+                    <button><a href="#">Sign up</a></button>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <p>Odin © The Odin Project 2024</p>
+        </div>
+        </body>
     </body>
 </html>
