--- a/index.html
+++ b/index.html
@@ -33,27 +33,29 @@
         <div class="certified-reviews">
             <h3>Some random information.</h3>
             <div class="card-container">
-                <div class="card-1">
+                <div class="cards">
                     <div class="card"></div>
                     <div class="card-text">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="card-2">
+                <div class="cards">
                     <div class="card"></div>
                     <div class="card-text">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="card-3">
+                <div class="cards">
                     <div class="card"></div>
                     <div class="card-text">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="card-4">
+                <div class="cards">
                     <div class="card"></div>
                     <div class="card-text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div>
         <div class="quote">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-            <h4>-Thor, God of Thunder</h4>
+            <div class="quote-container">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+                <h4>-Thor, God of Thunder</h4>
+            </div>            
         </div>
         <div class="call-to-action">
             <div class="recipient">
