--- a/index.html
+++ b/index.html
@@ -3,65 +3,70 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300..700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>Landing Page</title>
     </head>
     <body>
-        <div class="navbar">
-            <div class="logo">
-                Header Logo
-            </div>
-            <div class="header-links">
-                <a href="#">header link one</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
+        <div class="border-bar">
+            <div class="navbar">
+                <div class="logo">
+                    BRAND NAME
+                </div>
+                <div class="header-links">
+                    <a href="#">About</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Favorites</a>
+                </div>
             </div>
         </div>
         <div class="preview">
             <div class="preview-left">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <h1>Spring-Summer 2024 Collection</h1>
+                <p>Start this new year the right way with a collection made to make you shine! Enjoy handcrafted luxury made just for you.</p>
                 <div class="move-button">
                     <button><a href=#>Sign up</a></button>
-                </div>
-                
+                </div>                
             </div>
             <div class="preview-right">
                 <h4>this is a preview for an image</h4>
             </div>
         </div>
         <div class="certified-reviews">
-            <h3>Some random information.</h3>
+            <h3>Bestsellers</h3>
             <div class="card-container">
                 <div class="cards">
                     <div class="card"></div>
-                    <div class="card-text">this is some subtext under an illustration or image</div>
+                    <div class="card-text">this is some subtext under an image for the first bestseller</div>
                 </div>
                 <div class="cards">
                     <div class="card"></div>
-                    <div class="card-text">this is some subtext under an illustration or image</div>
+                    <div class="card-text">this is some subtext under an image for the second bestseller</div>
                 </div>
                 <div class="cards">
                     <div class="card"></div>
-                    <div class="card-text">this is some subtext under an illustration or image</div>
+                    <div class="card-text">this is some subtext under an image for the third bestseller</div>
                 </div>
                 <div class="cards">
                     <div class="card"></div>
-                    <div class="card-text">this is some subtext under an illustration or image</div>
+                    <div class="card-text">this is some subtext under an image for the fourth bestseller</div>
                 </div>
             </div>
         </div>
         <div class="quote">
             <div class="quote-container">
-                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-                <h4>-Thor, God of Thunder</h4>
+                <p><em>"If everything and everyone wore the same things the world would be boring, that's why luxury brands exist, to brighten up this monotonous people"</em></p>
+                <h4>-Unknown</h4>
             </div>            
         </div>
         <div class="call-to-action">
             <div class="recipient">
                 <div class="recipient-left">
-                    <h4>Call to action! It's time!</h4>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <h4>Subscribe to our newsletter</h4>
+                    <p>For a chance to partecipate to our private fashion show</p>
                 </div>
                 <div class="recipient-right">
                     <button><a href="#">Sign up</a></button>
